data/derived/fa15/progs/unify/prog1717.ml.out
Characters 63-64:
  |h::t->(h*h) + helper(a,x);;
                        ^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
